--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             padding: 0;
             width: 100%;
             height: 100%;
+            pointer-events: none;
         }
     </style>
 </head>
@@ -23,8 +24,12 @@
     width: 100%;
     height: 100%;
     display: block;
+    pointer-events: none;
+
 "> </canvas>
-    <script src="./src/index.ts" defer async type="module"></script>
+    <script src="./game_src/index.ts" defer async type="module"></script>
+
+    <script>document.addEventListener('contextmenu', event => event.preventDefault());</script>
 
 </body>
 
