Add ECS metadata, PointerManager, and Vite config
Move and convert game components to decorator-based modules and add
generated ECS loader (src/opulence-ecs). Add PointerManager for array
buffer pointers, new component files (mesh, transform), and tests.
Update build to use SWC (vite plugin), emit decorator metadata, and
adjust deps/tsconfig/.swcrc. Add index.html, update .gitignore and
remove unused resource assets.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        DV vs TA benchmark
-        <script src="index.ts" type="module"></script>
+        <script src="src/opulence-ecs/ecs.ts" type="module"></script>
     </body>
 </html>
