--- a/game_src/index.html
+++ b/game_src/index.html
@@ -28,9 +28,37 @@
             "
         >
         </canvas>
+
+        <div
+            style="
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                pointer-events: none;
+            "
+        >
+            <label for="Rotation Slider"></label>
+            <input
+                id="rotation"
+                type="range"
+                min="-1"
+                max="1"
+                step="0.01"
+                value="0"
+                style="
+                    position: absolute;
+                    bottom: 20px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    pointer-events: auto;
+                "
+        </div>
+
         <!--<script src="./game_src/index.ts" defer async type="module"></script>-->
 
-        <script src="main.ts" type="module"></script>
+        <script src="main.ts" type="module" defer></script>
         <script>
             document.addEventListener("contextmenu", (event) =>
                 event.preventDefault(),
