Add editor UI and Helios renderers
Introduce a Svelte-based editor (src/editor/*, App.svelte, style.css)
and mount it from index.html; register plugin in vite.config.ts

Add Helios and Helios2 renderers, framegraph and passes (culling, reset,
main draw), an indirect renderer, and several WGSL shaders to enable GPU
culling and multi-draw-indirect workflows

Add resources (main.scene.json, shaders), render tests, and helper
assets; update opulenece.config.ts and package.json (Svelte, plugin,
wgsl-debug) and pnpm lock

Remove obsolete game_src test components and legacy Mesh module; tidy
TODO and .gitignore entries

--- a/game_src/index.html
+++ b/game_src/index.html
@@ -41,10 +41,10 @@
         >
             <label for="Rotation Slider"></label>
             <input
-                id="rotation"
+                id="fov"
                 type="range"
-                min="-1"
-                max="1"
+                min="0"
+                max="90"
                 step="0.01"
                 value="0"
                 style="
@@ -57,12 +57,16 @@
         </div>
 
         <!--<script src="./game_src/index.ts" defer async type="module"></script>-->
+        <div id="debugDiv"></div>
 
-        <script src="main.ts" type="module" defer></script>
-        <script>
+        <script src="render_test.ts" type="module" defer></script>
+        <!--<script type="module">
+        import {startGame} from "./main.ts"
             document.addEventListener("contextmenu", (event) =>
                 event.preventDefault(),
             );
-        </script>
+
+            startGame()
+        </script>-->
     </body>
 </html>
