--- a/game_src/multi-draw-test/index.html
+++ b/game_src/multi-draw-test/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <script src="./src/editor/main.ts" defer type="module"></script>
     </head>
-    <body></body>
+    <body>
+        <canvas id="mainCanvas"></canvas>
+
+        <script src="./main.ts" type="module"></script>
+    </body>
 </html>
