--- a/game_src/index.html
+++ b/game_src/index.html
@@ -57,7 +57,9 @@
         </div>
 
         <!--<script src="./game_src/index.ts" defer async type="module"></script>-->
-        <div id="debugDiv"></div>
+        <div id="debugDiv">
+            <p id="fps">FPS</p>
+        </div>
 
         <script src="render_test.ts" type="module" defer></script>
         <!--<script type="module">
