--- a/game_src/index.html
+++ b/game_src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Legends of League</title>
+        <title>Testovací scéna</title>
 
         <style>
             html,
@@ -29,46 +29,7 @@
         >
         </canvas>
 
-        <div
-            style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                pointer-events: none;
-            "
-        >
-            <label for="Rotation Slider"></label>
-            <input
-                id="fov"
-                type="range"
-                min="0"
-                max="90"
-                step="0.01"
-                value="0"
-                style="
-                    position: absolute;
-                    bottom: 20px;
-                    left: 50%;
-                    transform: translateX(-50%);
-                    pointer-events: auto;
-                "
-        </div>
-
-        <!--<script src="./game_src/index.ts" defer async type="module"></script>-->
-        <div id="debugDiv">
-            <p id="fps">FPS</p>
-        </div>
-
         <script src="render_test.ts" type="module" defer></script>
-        <!--<script type="module">
-        import {startGame} from "./main.ts"
-            document.addEventListener("contextmenu", (event) =>
-                event.preventDefault(),
-            );
 
-            startGame()
-        </script>-->
     </body>
 </html>
